# mkdocs-demo1

./: 404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: shell.md
search/: search_index.json
shell/: index.html
