[tool.poetry]
name = "mkdocs-demo1"
version = "0.1.0"
description = ""
authors = ["Andrii Kliuiko <32270840+PBRAgent@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
